small correction to overflow and play button

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   -moz-user-select: none;
   -ms-user-select: none; 
   user-select: none;
-  overflow: hidden; 
+  overflow-x: hidden; 
 }
 
 html {
